fix fixed content shown even on small devices

--- a/index.css
+++ b/index.css
@@ -382,6 +382,14 @@ code {
 	animation: blur 2s ease-in-out;
 }
 
-.fixed {
-	position: fixed;
+@media only screen and (max-width: 800px) {
+	.fixed {
+		display: none;
+	}
+}
+
+@media only screen and (min-width: 800px) {
+	.fixed {
+		position: fixed;
+	}
 }
